# sweep

./: .gitignore  README.md  inference.py  main.py  pyproject.toml  requirements.txt  training.py
configs/ABNet/DTU/: DTU.yaml
configs/GBiNet/DTU/: DTU.yaml
configs/GBiNet/Replica/scene_lists/: validation.txt
configs/GBiNet/ScanNet/: ScanNet.yaml
configs/MVANet/DTU/: DTU.yaml
configs/MVSNet/DTU/: DTU.yaml
configs/MVSNet/Replica/: Replica.yaml
configs/MVSNet/Replica/scene_lists/: inference.txt  training.txt
configs/MVSNet/ScanNet/scene_lists/: inference.txt  training.txt
configs/MVSNet/TNT/: TNT.yaml
configs/MVSNet/TNT/scene_lists/: inference.txt  training.txt  validation.txt
configs/NP_CVP_MVSNet/DTU/: DTU.yaml
configs/NP_CVP_MVSNet/Replica/: DTU.yaml
configs/NP_CVP_MVSNet/TNT/: TNT.yaml
configs/NP_CVP_MVSNet/TNT/scene_lists/: inference.txt
scripts/: inference.py  inference.sh  training.py  training.sh
src/: config.py
src/components/: encoders.py  layers.py  refiners.py  regularizers.py
src/datasets/: BaseDataset.py  DTU.py  Replica.py  ScanNet.py  TNT.py
src/evaluation/: create_virtual_cameras_replica.py  cull_mesh.py  eval_2d.py  eval_3d.py  eval_recon.py  visualization.py
src/networks/: ABNet.py  GBiNet.py  MVANet.py  MVSNet.py  NP_CVP_MVSNet.py
src/pipelines/: ABNet.py  BasePipeline.py  GBiNet.py  MVANet.py  MVSNet.py  NP_CVP_MVSNet.py
src/tools/: consensus_filtering.py  eval_ate.py  generate_bounding_box.py  laplacian_filtering.py  model_convert.py  project_points.py  render_frustum.py  render_mesh.py  render_options.json  to_normal.py  video_gen.py  vis_cameras.py
src/utils/: geometry.py
