[project]
name = "sweep"
version = "0.1.0"
description = ""
authors = [{name = "Nathaniel Burgdorfer",email = "nburgdorfer@gmail.com"}]
license = {file = "LICENSE"}

readme = "README.md"
keywords = ["computer vision", "3d reconstruction", "geometry", "machine learning"]
requires-python = ">=3.12"
classifiers=[
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Topic :: Multimedia",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Multimedia :: Graphics :: 3D Modeling",
	"Topic :: Multimedia :: Graphics :: 3D Rendering",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Image Processing",
	"Topic :: Scientific/Engineering :: Visualization",
	"Topic :: Utilities",
]

dependencies = [
    "cvtkit==0.0.38",
    "h5py==3.14.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plyfile>=1.1.2",
    "pytest>=8.4.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "tensorboard>=2.20.0",
    "torch==2.8.0",
    "torchsparse",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "trimesh>=4.7.4",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchsparse = { git = "https://github.com/mit-han-lab/torchsparse.git" }


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.urls]
Homepage = "https://nburgdorfer.github.io/cvtkit/"
Repository = "https://github.com/nburgdorfer/sweep"

[tool.uv.extra-build-dependencies]
torchsparse = ["torch", "numpy", "tqdm"]
